--- a/test/html/index.html
+++ b/test/html/index.html
@@ -14,7 +14,7 @@
 
     <script src="../../build/linter.js"></script>
     
-    <script src="../../build/bundle.test.js"></script>
+    <script src="bundle.test.js"></script>
 </body>
 
 </html>
